<resources>
    <string-array name="Gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="no_classes_added">You didn\'t add any classes yet, please add a class by clicking \"\"+\"\" icon at below.</string>
    <string name="no_students_added">You didn\'t add any students yet, please add a student by clicking \"\"+\"\" icon at above.</string>
    <string name="no_attendance_added">You didn\'t add any students to take attendance, please add a student for taking attendance.</string>
    <string name="no_social_added">You didn\'t add any Social grades , please add a Social grade by clicking \"\"+\"\" icon at below.</string>
    <string name="no_templates_added">You didn\'t add any Templates , please add a Templates by clicking \"\"+\"\" icon at below.</string>
    <string name="no_connected_students_added">You didn\'t connect any students, please connect a student with parent code by clicking \"\"+\"\" icon at below.</string>
    <string name="no_messages_parent">You didn\'t receive any notifications from teachers.</string>
    <string name="no_social_grades">Teacher didn\'t assign any Social grades on this selected month</string>
    <string name="no_student">No student name</string>
    <string name="app_name">De Nobili</string>
    <string name="hint_input_username">Email/Mobile Number</string>
    <string name="hint_input_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_text">Sign Up</string>
    <string name="enter_username">Please enter a valid Email/Mobile Number</string>
    <string name="enter_validEmail">Please enter a valid Email Id</string>
    <string name="auth_failed">Google authentication failed</string>
    <string name="input_password">Please enter a valid password</string>
    <string name="admin_aert">Admin don\'t have authentication to access mobile app, Please redirect to web app.</string>
    <string name="mobile_number_prompt_title">Enter mobile number</string>
    <string name="mobile_number_prompt">Please fill your mobile number to complete the registration process</string>
    <string name="btn_signup">Sign Up</string>
    <string name="input_mail">Email Id</string>
    <string name="input_mobile_no">Mobile number</string>
    <string name="hint_input_password_confirm">Confirm password</string>
    <string name="hint_input_otp">Enter OTP here</string>
    <string name="susertype_student">Student</string>
    <string name="susertype_parent">Parent</string>
    <string name="susertype_teacher">Teacher</string>
    <string name="user_type_selection_text">I am a</string>
    <string name="termsofservice">By clicking Sign Up, you agree to the Terms of Service and Privacy Policy.</string>
    <string name="by_clicking">By clicking \'Sign Up\', you agree to the </string>
    <string name="terms">Terms of service </string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="and">and </string>
    <string name="email_prompt">Please enter a valid Email</string>
    <string name="enter_valid_otp">Please enter a valid OTP number</string>
    <string name="passwords_not_match">Passwords doesn\'t match</string>
    <string name="success_forgot11">OTP sent to your registered Email Id/Mobile number, Please check once.</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="btn_submit">Submit</string>
    <string name="regenerate_submit">Regenerate OTP</string>
    <string name="generate_submit">Generate OTP</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="confirm_new_pass">Confirm new password</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="report">Reports</string>
    <string name="outbox">Outbox</string>
    <string name="nav_social_grade_string">Social Grades</string>
    <string name="nav_template_string">Templates</string>
    <string name="manage">Manage</string>
    <string name="api_settings">API Settings</string>
    <string name="email_settings">Email</string>
    <string name="others">Others</string>
    <string name="switch_account">Switch Account</string>
    <string name="logout">Logout</string>
    <string name="logout_alert">Do you really want to Logout?</string>
    <string name="input_roll_number">Student Roll Number*</string>
    <string name="input_student_name">Student Name*</string>
    <string name="input_student_admission_id">Student Admission Id*</string>
    <string name="admission_id_prompt">Please enter an Admission Id</string>
    <string name="prompt_student_name">Please enter the name of the student</string>
    <string name="prompt_roll_no">Please enter a Roll no</string>
    <string name="title_student_code">Student code</string>
    <string name="title_attendence_history">See Attendance History</string>
    <string name="title_parent_name">Parents Details</string>
    <string name="student_code_share_text">This is a student code from classroomJOIN app</string>
    <string name="hint_class_name">Class name</string>
    <string name="parent_mobile_not_exist">Parent mobile number doesn\'t exists</string>
    <string name="unselected_ones">The unselected students doesn\'t contain their parent\'s mobile number.</string>
    <string name="class_name_length_error">Class name cannot be more than 14 letters.</string>
    <string name="class_name_invalid">Please enter a valid Class name</string>
    <string name="item_doesnt_exist">Sorry this item does not exist to delete</string>
    <string name="delete_confirm">Are you sure want to delete this item?</string>
    <string name="edit_class">Edit Class</string>
    <string name="select_students_prompt">Please select atleast one student</string>
    <string name="deletion_success">Successfully deleted</string>
    <string name="sms">SMS</string>
    <string name="message">MESSAGE</string>
    <string name="mail">MAIL</string>
    <string name="diary">Diary</string>
    <string name="grade">Grade</string>
    <string name="diary_type">Please select a diary event type</string>
    <string name="select_preference">Please select a preference</string>
    <string name="send_now">Instant SMS</string>
    <string name="primary_mobile">Parent Number</string>
    <string name="alternate_mobile">Alternate Number</string>
    <string name="select_mobile_preference">Please select a mobile number preference</string>
    <string name="schedlue_time">Schedule</string>
    <string name="type_message">Type your message here</string>
    <string name="events">Events</string>
    <string name="notice">Notice</string>
    <string name="assignement">Assignment</string>
    <string name="positive_social_grade">Positive Social Grade</string>
    <string name="negative_social_grade">Negative Social Grade</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="valid_message_to_send">Please enter a valid message to send</string>
    <string name="valid_subject_to_send">Please enter a valid subject to send</string>
    <string name="valid_message_to_send_charecter_limit">Please enter a message that has atleast 8 Characters long</string>
    <string name="upload_file">Do you want to upload this file?</string>
    <string name="no_images">You haven\'t selected any files to send</string>
    <string name="scheduled_on">Scheduled on </string>
    <string name="select_a_file">Please select a file</string>
    <string name="personal_details">Personal Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="title_personal_details">Personal Details</string>
    <string name="title_contact_details">Contact Details</string>
    <string name="edit">Edit</string>
    <string name="enter_valid_firstname">Please enter valid name</string>
    <string name="dob">Date of Birth:</string>
    <string name="gender">Gender:</string>
    <string name="dummy_dob">YYYY-MM-DD</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address_line2">Address Line 2</string>
    <string name="address_line1">Address Line 1</string>
    <string name="full_name">Full name</string>
    <string name="first_name">First name</string>
    <string name="middile_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="alternate_mobilenumber">Alternate mobile number</string>
    <string name="landine_number">Landline number</string>
    <string name="input_student_code">Student Code</string>
    <string name="input_student_code_prompt">Please enter a student code to send</string>
    <string name="currently_showing">Currently showing results for \"@\"</string>
    <string name="list_sheet">List Sheet</string>
    <string name="bubble_sheet">Bubble Sheet</string>
    <string name="please_select_present_students">Please select the present and absent Students</string>
    <string name="successfully_posted_attendance">Successfully posted your Attendance</string>
    <string name="class_attendance">Attendance of the class students on the date </string>
    <string name="input_social_grade_name">Social grade\'s name</string>
    <string name="input_social_grade_mark">Social grade\'s mark</string>
    <string name="social_grade_name_error">Please enter name of the Parent</string>
    <string name="social_grde_mark_error">Please enter a valid mark</string>
    <string name="select_social_grade">Please select the Social grades to send</string>
    <string name="success_send_social_grade">Successfully send the Social Grade</string>
    <string name="success_add_social_grade">Successfully added the Social Grade</string>
    <string name="success_edit_social_grade">Successfully edited the Social Grade</string>
    <string name="success_delete_social_grade">Deleted the Social grade Successfully</string>
    <string name="social_grades_of">Social grades of </string>
    <string name="students_text">Students</string>
    <string name="input_username">Please input a user name</string>
    <string name="input_sender_id">Please input a sender id</string>
    <string name="hint_input_senderid">Sender ID</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="send_grid_settings">Send Grid Settings</string>
    <string name="twillio_settings">Twillio Settings</string>
    <string name="gmail_settings">Gmail Settings</string>
    <string name="btn_edit">Edit</string>
    <string name="input_template_heading">Subject</string>
    <string name="input_template_text">Text</string>
    <string name="go_to_outbox">GO TO OUTBOX</string>
    <string name="expired_outbox">There are some items in the Outbox that have expired the 72 hour offline limit</string>
    <string name="btn_discard">Discard items</string>
    <string name="input_mobile_number">Please enter your mobile number</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">Ok</string>
    <string name="nan">NaN</string>
    <string name="allevents">All</string>
    <string name="connected_students">Connected Students</string>
    <string name="accounts">Accounts</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="action_settings">Settings</string>
    <string name="btn_create">Create</string>
    <string name="inbox">Inbox</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_rollnumber">Sort by Roll Number</string>
    <string name="change_language">App Language</string>
    <string name="message_reports">Message</string>
</resources>