<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:background="@color/hangout_status_green_color"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/outbox"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/expired_outbox"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_discard"
            android:textColor="@color/lighter_red" />

        <Button
            android:id="@+id/button_ok"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_outbox"
            android:textColor="@color/lighter_green" />
    </LinearLayout>

</LinearLayout>